Fix CSS: Update column class name and restore text alignment for footer list in 19-style.css

--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -172,7 +172,7 @@ body {
   list-style: none;
 }
 
-.col-1-2-3 {
+.col-1-3 {
   width: 33.33%;
   float: left;
   padding: 0.5rem;
@@ -184,12 +184,12 @@ body {
   padding: 0.5rem;
 }
 
-.footer ul {
-  text-align: right;
-}
-
 .footer-copyright {
   margin: 0;
   font-size: var(--font-size-small);
   color: var(--text-color);
+}
+
+.footer ul {
+  text-align: right;
 }
